tests/language_modules/13_contract_blocks/valid/function_requires.vf
module FunctionRequires

function increment(amount: Integer) returns Integer
requires amount >= 0
is
    return amount + 1
end increment

end FunctionRequires