tests/language_modules/13_contract_blocks/invalid_semantics/requires_must_be_boolean.vf
module RequiresMustBeBoolean

function current() returns Integer
requires 1
is
    return 1
end current

end RequiresMustBeBoolean